--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -36,25 +36,27 @@
           <label for="x" class="form-label">x</label>
           <input type="number" formControlName="x" class="form-control" id="x" aria-label="x" placeholder="x"
             required [ngClass]="{
-              'is-invalid': editDeviceForm.controls.x.status !== 'VALID',
-              'is-valid': editDeviceForm.controls.x.status === 'VALID',
-            }" />
+                  'is-invalid': editDeviceForm.get('position.x') && editDeviceForm.get('position.x')?.status !== 'VALID',
+                  'is-valid': editDeviceForm.get('position.x')?.status === 'VALID',
+                }" />
         </div>
-        <div *ngIf="editDeviceForm.controls.x.errors" class="invalid-feedback">
-          <div *ngIf="editDeviceForm.controls.x.errors.required">Name is required</div>
+        <div *ngIf="editDeviceForm.get('position.x') && editDeviceForm.get('position.x')?.errors" class="invalid-feedback">
+          <div *ngIf="editDeviceForm.get('position.x')?.errors?.required">x is required</div>
+          <div *ngIf="editDeviceForm.get('position.x')?.errors?.minlength">x must be at least 4 characters</div>
+          <div *ngIf="editDeviceForm.get('position.x')?.errors?.maxlength">x must be at most 255 characters</div>
         </div>
       </div>
       <div class="col">
         <div class="form-group mb-3">
           <label for="y" class="form-label">y</label>
           <input type="number" formControlName="y" aria-label="y" placeholder="y" class="form-control" id="y"
-            [value]="editDeviceForm.controls.y.value" required [ngClass]="{
-              'is-invalid': editDeviceForm.controls.y.status !== 'VALID',
-              'is-valid': editDeviceForm.controls.y.status === 'VALID',
-            }" />
+            required [ngClass]="{
+                  'is-invalid': editDeviceForm.get('position.y')?.status !== 'VALID',
+                  'is-valid': editDeviceForm.get('position.y')?.status === 'VALID',
+                }" />
         </div>
-        <div *ngIf="editDeviceForm.controls.y.errors" class="invalid-feedback">
-          <div *ngIf="editDeviceForm.controls.y.errors.required">Name is required</div>
+        <div *ngIf="editDeviceForm.get('position.y')?.errors" class="invalid-feedback">
+          <div *ngIf="editDeviceForm.get('position.y')?.errors?.required">y is required</div>
         </div>
       </div>
       <div class="col">
@@ -62,12 +64,12 @@
           <label for="h" class="form-label">h</label>
           <input type="number" formControlName="h" class="form-control" id="h" aria-label="h" placeholder="h"
             required [ngClass]="{
-              'is-invalid': editDeviceForm.controls.h.status !== 'VALID',
-              'is-valid': editDeviceForm.controls.h.status === 'VALID',
-            }" />
+                  'is-invalid': editDeviceForm.get('position.h')?.status !== 'VALID',
+                  'is-valid': editDeviceForm.get('position.h')?.status === 'VALID',
+                }" />
         </div>
-        <div *ngIf="editDeviceForm.controls.h.hasError('required')" class="invalid-feedback">
-          <div *ngIf="editDeviceForm.controls.h.hasError('required')">Name is required</div>
+        <div *ngIf="editDeviceForm.get('position.h')?.errors" class="invalid-feedback">
+          <div *ngIf="editDeviceForm.get('position.h')?.errors?.required">h is required</div>
         </div>
       </div>
     </div>
