--- a/src/app/components/3d/3d.component.html
+++ b/src/app/components/3d/3d.component.html
@@ -1,2 +1,2 @@
-<canvas #canvas id="canvas" style="height: 80%; width: 100%"></canvas>
+<canvas #canvas id="canvas" style="height: 88vh; width: 98vw; display: block;"></canvas>
 <!-- <app-log [component]="component"></app-log> -->
