--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -16,18 +16,18 @@
         </td>
         <td>({{ device.position.x }}, {{ device.position.y }}, {{ device.position.h }})</td>
         <td>
-          <a title="{{ device.modelId }}" href="edit-model/{{ device.modelId }}"
-            ><i class="bi bi-motherboard"></i>
-            {{ device.modelId === null ? 'is null' : FindModelName(device.modelId) }}</a
-          >
+          <a title="{{ device.modelId }}" href="edit-model/{{ device.modelId }}"><i class="bi bi-motherboard"></i>
+            {{ device.modelId === null ? 'is null' : FindModelName(device.modelId) }}</a>
           <p class="fs-7 fw-lighter deviceid">{{ device.modelId }}</p>
         </td>
         <td>
           <fieldset class="btn-group float-md-end" aria-label="device-operations">
-            <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="EditForm(device)">
+            <button type="button" class="btn btn-success btn-sm move-right" id="edit-device"
+              (click)="EditForm(device)">
               <i class="bi bi-pen"></i>
             </button>
-            <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="DeleteDevice(device._id)">
+            <button type="button" id="delete-device" class="btn btn-danger btn-sm"
+              (click)="DeleteDevice(device._id)">
               <i class="bi bi-trash"></i>
             </button>
             <button type="button" id="clone-device" class="btn btn-light btn-sm" (click)="CloneDevice(device._id)">
@@ -41,13 +41,8 @@
   <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
     <i class="bi bi-plus-lg"></i> Add
   </button>
-  <ngb-pagination
-    [(page)]="deviceListPage"
-    [pageSize]="5"
-    [collectionSize]="deviceList.length"
-    [maxSize]="5"
-    [boundaryLinks]="true"
-    aria-label="Attribute pagination">
+  <ngb-pagination [(page)]="deviceListPage" [pageSize]="5" [collectionSize]="deviceList.length" [maxSize]="5"
+    [boundaryLinks]="true" aria-label="Attribute pagination">
   </ngb-pagination>
 </div>
 
