feat: Enhance form validation and improve device management functionality

--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -5,18 +5,11 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="id" class="form-label">Id</label>
-          <input
-            type="text"
-            formControlName="id"
-            id="id"
-            required
-            readonly
-            [ngClass]="{
+          <input type="text" [value]="form.controls.id.value" id="id" required readonly [ngClass]="{
               'is-invalid': this.form.controls.id.status !== 'VALID',
               'is-valid': this.form.controls.id.status === 'VALID',
               'form-control': true,
-            }"
-          />
+            }" />
           <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
             <div *ngIf="this.form.controls.id.errors.minlength">Id must be at least 4 characters</div>
@@ -26,20 +19,15 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="name" class="form-label">Name</label>
-          <textarea
-            [ngClass]="{
+          <textarea [ngClass]="{
               'is-invalid': this.form.controls.name.status !== 'VALID',
               'is-valid': this.form.controls.name.status === 'VALID',
               'form-control': true,
-            }"
-            formControlName="name"
-            id="name"
-            required
-            >{{ this.form.value.name }}</textarea
-          >
+            }" formControlName="name" id="name" required></textarea>
           <div *ngIf="this.form.controls.name.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.name.errors.required">Attribute name is required</div>
-            <div *ngIf="this.form.controls.name.errors.minlength">Attribute name must be at least 6 characters</div>
+            <div *ngIf="this.form.controls.name.errors.minlength">Attribute name must be at least 6 characters
+            </div>
           </div>
         </div>
       </div>
@@ -48,39 +36,32 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="type" class="form-label">Type</label>
-          <select
-            (change)="changeType($event)"
-            formControlName="type"
-            [ngClass]="{
-              'is-invalid': this.form.controls.type.status !== 'VALID',
-              'is-valid': this.form.controls.type.status === 'VALID',
-              'form-select': true,
-            }"
-            id="type"
-          >
+          <select (change)="changeType($event)" formControlName="type" [ngClass]="{
+                    'is-invalid': this.editAttributeDictionaryForm.controls.type.status !== 'VALID',
+                    'is-valid': this.editAttributeDictionaryForm.controls.type.status === 'VALID',
+                    'form-select': true,
+                  }" id="type">
             <option *ngFor="let typeObj of deviceTypeDict['list']; let i = index">
               {{ typeObj.name }}
             </option>
           </select>
-          <div *ngIf="this.form.controls.category.errors" class="invalid-feedback">
-            <div *ngIf="this.form.controls.category.errors.required">Category is required</div>
+          <div *ngIf="this.editAttributeDictionaryForm.controls.type.errors" class="invalid-feedback">
+            <div *ngIf="this.editAttributeDictionaryForm.controls.type.errors.required">Category is required</div>
+          </div>
+          <div>
+            {{ this.toString(this.editAttributeDictionaryForm.controls.type.dirty) }}
           </div>
         </div>
       </div>
       <div class="col">
         <div class="form-group mb-3">
           <label for="category" class="form-label">Category</label>
-          <select
-            (change)="changeCategory($event)"
-            formControlName="category"
-            [ngClass]="{
+          <select (change)="changeCategory($event)" formControlName="category" [ngClass]="{
               'is-invalid': this.form.controls.category.status !== 'VALID',
               'is-valid': this.form.controls.category.status === 'VALID',
               'form-select': true,
-            }"
-            id="category"
-          >
-            <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
+            }" id="category">
+            <option *ngFor="let categoryObj of deviceCategoryDict?.list; let i = index">
               {{ categoryObj.name }}
             </option>
           </select>
@@ -92,20 +73,13 @@
       <div class="col">
         <div class="form-group mb-3">
           <label for="component" class="form-label">Component</label>
-          <select
-            (change)="changeCategory($event)"
-            formControlName="component"
-            [ngClass]="{
+          <select (change)="changeCategory($event)" formControlName="component" [ngClass]="{
               'is-invalid': this.form.controls.component.status !== 'VALID',
               'is-valid': this.form.controls.component.status === 'VALID',
               'form-select': true,
-            }"
-            id="component"
-            ngbPopover="Select where you want use this attribute"
-            triggers="mouseenter:mouseleave"
-            popoverTitle="Range of use by components"
-          >
-            <option *ngFor="let componentObj of componentDictionary.list; let i = index">
+            }" id="component" ngbPopover="Select where you want use this attribute"
+            triggers="mouseenter:mouseleave" popoverTitle="Range of use by components">
+            <option *ngFor="let componentObj of componentDictionary?.list; let i = index">
               {{ componentObj.name }}
             </option>
           </select>
@@ -116,10 +90,14 @@
       </div>
     </div>
     <div class="form-group mb-3">
-      <button type="submit" [disabled]="!(this.form.valid && this.form.touched)" class="btn btn-primary">Update</button>
-      <div *ngIf="!(this.form.valid && this.form.touched)" class="invalid-feedback">Form is invalid</div>
+      <button type="submit" [disabled]="!(this.form.valid && this.form.touched)"
+        class="btn btn-primary">Update</button>
+      <div *ngIf="!this.form.valid && (this.form.touched || isSubmitted)" class="invalid-feedback">Form is
+        invalid</div>
     </div>
   </form>
 </div>
 
+<!-- The <app-log> component is used to display logs related to the current component.
+     The [component] input binds the logComponent object to provide context-specific logs. -->
 <app-log [component]="logComponent"></app-log>
