--- a/src/app/components/models/add-model/add-model.component.html
+++ b/src/app/components/models/add-model/add-model.component.html
@@ -4,23 +4,19 @@
     <form [formGroup]="addModelForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
       <div class="row">
         <div class="col">
-          <div class="form-group mb-3">
+          <div class="mb-3">
             <label for="name" class="form-label">Name</label>
-            <input
-              [ngClass]="{
+            <input [ngClass]="{
                 'is-invalid':
                   addModelForm.controls.name.invalid &&
                   (addModelForm.controls.name.touched || addModelForm.controls.name.dirty),
                 'is-valid': addModelForm.controls.name.valid,
                 'form-control': true,
-              }"
-              formControlName="name"
-              minlength="4"
-              id="name"
-              maxlength="255" />
+              }" formControlName="name" minlength="4" id="name" maxlength="255" />
             <div *ngIf="this.addModelForm.controls.name.errors" class="invalid-feedback">
               <div *ngIf="this.addModelForm.controls.name.errors.required">Name is required</div>
-              <div *ngIf="this.addModelForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
+              <div *ngIf="this.addModelForm.controls.name.errors.minlength">Name must be at least 4 characters
+              </div>
               <div *ngIf="this.addModelForm.get('texture.bottom')?.errors?.minlength">
                 Bottom must be at least 2 characters long
               </div>
@@ -30,45 +26,31 @@
       </div>
       <div class="row" formGroupName="dimension">
         <div class="col">
-          <div class="form-group mb-3">
+          <div class="form-group mb-2">
             <label for="width" class="form-label">Width</label>
-            <input
-              type="text"
-              formControlName="width"
-              id="width"
-              maxlength="6"
-              minlength="1"
-              required
-              [ngClass]="{
+            <input type="number" formControlName="width" id="width" maxlength="6" minlength="1" required [ngClass]="{
                 'is-invalid':
                   addModelForm.get('dimension.width')?.invalid &&
                   (addModelForm.get('dimension.width')?.touched || addModelForm.get('dimension.width')?.dirty),
-                'is-valid': this.addModelForm.get('dimension.width')?.valid,
+                'is-valid': this.addModelForm.get('dimension.width')?.status === 'VALID',
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.get('dimension.width')?.errors" class="invalid-feedback">
               <div *ngIf="this.addModelForm.get('dimension.width')?.errors?.required">Width is required</div>
               <div *ngIf="this.addModelForm.get('dimension.width')?.errors?.minlength">
-                Width must be at least 1 character.
+                Width must be at least 1 number
               </div>
-            </div>
-            <div
-              class="form-control-feedback"
-              *ngIf="addModelForm.errors && (addModelForm.dirty || addModelForm.touched)">
-              <p *ngIf="addModelForm.errors.pattern" class="text-danger">Number Only</p>
+              <div *ngIf="this.addModelForm.get('dimension.width')?.errors?.pattern">
+                Width must be a number
+              </div>
+              <p *ngIf="addModelForm.get('dimension.width')?.errors?.pattern" class="text-danger">Number Only</p>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="form-group mb-3">
+          <div class="form-group mb-2">
             <label for="height" class="form-label">Height</label>
-            <input
-              type="text"
-              formControlName="height"
-              id="height"
-              maxlength="6"
-              minlength="1"
-              required
+            <input type="number" formControlName="height" id="height" maxlength="6" minlength="1" required
               [ngClass]="{
                 'is-invalid': this.isFieldInvalid('dimension.height'),
                 'is-valid': this.addModelForm.get('dimension.height')?.status === 'VALID',
@@ -83,16 +65,9 @@
           </div>
         </div>
         <div class="col">
-          <div class="form-group mb-3">
+          <div class="form-group mb-2">
             <label for="depth" class="form-label">Depth</label>
-            <input
-              type="text"
-              formControlName="depth"
-              id="depth"
-              maxlength="4"
-              minlength="1"
-              required
-              [ngClass]="{
+            <input type="number" formControlName="depth" id="depth" maxlength="4" minlength="1" required [ngClass]="{
                 'is-invalid':
                   this.addModelForm.get('dimension.depth')?.invalid &&
                   (this.addModelForm.get('dimension.depth')?.touched ||
@@ -111,13 +86,9 @@
       </div>
       <div class="row" formGroupName="texture">
         <div class="col">
-          <div class="form-group mb-3">
+          <div class="form-group mb-2">
             <label for="front" class="form-label">Front</label>
-            <input
-              type="text"
-              formControlName="front"
-              id="front"
-              [ngClass]="{
+            <input type="text" formControlName="front" id="front" [ngClass]="{
                 'is-invalid':
                   this.addModelForm.get('texture.front')?.invalid &&
                   (this.addModelForm.get('texture.front')?.touched || this.addModelForm.get('texture.front')?.dirty),
@@ -125,7 +96,8 @@
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.get('texture')?.get('front')?.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.get('texture')?.get('front')?.errors?.required">Front is required</div>
+              <div *ngIf="this.addModelForm.get('texture')?.get('front')?.errors?.required">Front is required
+              </div>
               <div *ngIf="this.addModelForm.get('texture')?.get('front')?.errors?.minlength">
                 Front must be at least 1 number.
               </div>
@@ -135,11 +107,7 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="back" class="form-label">Back</label>
-            <input
-              type="text"
-              formControlName="back"
-              id="back"
-              [ngClass]="{
+            <input type="text" formControlName="back" id="back" [ngClass]="{
                 'is-invalid':
                   this.addModelForm.get('texture.back')?.invalid &&
                   (this.addModelForm.get('texture.back')?.touched || this.addModelForm.get('texture.back')?.dirty),
@@ -157,11 +125,7 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="side" class="form-label">Side</label>
-            <input
-              type="text"
-              formControlName="side"
-              id="side"
-              [ngClass]="{
+            <input type="text" formControlName="side" id="side" [ngClass]="{
                 'is-invalid':
                   this.addModelForm.get('texture.side')?.invalid &&
                   (this.addModelForm.get('texture.side')?.touched || this.addModelForm.get('texture.side')?.dirty),
@@ -179,11 +143,7 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="top" class="form-label">Top</label>
-            <input
-              type="text"
-              formControlName="top"
-              id="top"
-              [ngClass]="{
+            <input type="text" formControlName="top" id="top" [ngClass]="{
                 'is-invalid':
                   this.addModelForm.get('texture.top')?.invalid &&
                   (this.addModelForm.get('texture.top')?.touched || this.addModelForm.get('texture.top')?.dirty),
@@ -201,15 +161,11 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="bottom" class="form-label">Bottom</label>
-            <input
-              type="text"
-              formControlName="bottom"
-              id="bottom"
-              minlength="2"
-              [ngClass]="{
+            <input type="text" formControlName="bottom" id="bottom" [ngClass]="{
                 'is-invalid':
                   this.addModelForm.get('texture.bottom')?.invalid &&
                   (this.addModelForm.get('texture.bottom')?.touched || this.addModelForm.get('texture.bottom')?.dirty),
+                  'is-valid': this.addModelForm.get('texture.bottom')?.valid,
                 'form-control': true,
               }" />
             <div *ngIf="this.addModelForm.get('texture.bottom')?.errors" class="invalid-feedback">
@@ -217,14 +173,17 @@
               <div *ngIf="this.addModelForm.get('texture.bottom')?.errors?.minlength">
                 Bottom must be at least 2 characters.
               </div>
-              <div *ngIf="textureGroup.controls.bottom.errors?.minlength">Bottom must be at least 2 characters...</div>
+              <div *ngIf="addModelForm.get('texture.bottom')?.errors?.minlength">Bottom must be at least 2
+                characters...
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <button [disabled]="isSubmitDisabled" class="btn btn-primary" tooltip="Click to create a new device model.">
+          <button [disabled]="isSubmitDisabled" class="btn btn-primary"
+            tooltip="Submit the form to add a new model.">
             <i class="bi bi-file-earmark-plus"></i> Add Model
           </button>
         </div>
@@ -238,7 +197,7 @@
             <!-- Debug information is displayed only when not in production mode -->
             <pre class="bg-light p-2 border rounded">{{ getFormValues() }}</pre>
             <p class="text-secondary fw-bold">Current Form Values:</p>
-            <pre class="bg-light p-2 border rounded">{{ addModelForm.value | json }}</pre>
+            <pre *ngIf="!isProduction" class="bg-light p-2 border rounded">{{ addModelForm.value | json }}</pre>
           </ng-container>
         </div>
       </div>
