--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h3><i class="bi bi-hdd"></i> Devices</h3>
+  <h3><i class="bi bi-hdd"></i> Devices [{{deviceList.length}} devices]</h3>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
@@ -41,7 +41,7 @@
   <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
     <i class="bi bi-plus-lg"></i> Add
   </button>
-  <ngb-pagination [(page)]="deviceListPage" [pageSize]="5" [collectionSize]="deviceList.length" [maxSize]="5"
+  <ngb-pagination [(page)]="deviceListPage" [pageSize]="5" [collectionSize]="deviceList.length"
     [boundaryLinks]="true" aria-label="Attribute pagination">
   </ngb-pagination>
 </div>
